--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,7 +87,8 @@ nav:
           - GNU make中的2种变量: Embedded System\linux\makefile\two_flavors_of_variables.md
 
         - JZ2440开发:
-          - 关于交叉编译工具链: Embedded System\linux\jz2440\cross_compile.md
+          - CMake交叉编译: Embedded System\linux\jz2440\cmake_cross_compile.md
+          - JZ2440 dev tips: Embedded System\linux\jz2440\jz2440_dev_tips.md
 
       - STM32: 
         - STM32串口编程之中断方式: Embedded System/STM32/stm32_hal_uart.md
@@ -102,6 +103,11 @@ nav:
         - 常用shell命令: Embedded System/linux_shell_cmd.md
         - Linux Shell脚本编程: Embedded System/linux_shell_program.md
         - GCC&Clang&LLVM的关系: Embedded System/gcc_clang_llvm.md
+
+      - Motor Control: 
+        - 转矩: Embedded System\motor_control\torque.md
+        - 直流刷式电机: Embedded System\motor_control\dc_motor_driver_chip.md
+        - 步进电机: Embedded System\motor_control\stepper_motor_driver_chip.md
 
       - Zigbee: Embedded System/zigbee_keys.md
       - ESP8266: Embedded System/ESP8266.md
