--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,10 +4,6 @@ site_name: EdgeAI-Lab
 # repo_name: Notebook
 # repo_url: https://github.com/edgeML/notebook
 
-# 404 page
-static_templates:
-    - 404.html
-
 nav:
     # - Home: about.md
     # - About Me: about.md
@@ -37,29 +33,10 @@ nav:
       - Android编译系统: Android/android_compiler_system/android_compile_system.md
       
       - Java:
-        - Swing: Android/java/java_ui_swing.md
         - Ubuntu中配置Java: Android/java/ubuntu_config_java.md
+        - Swing: Android/java/java_ui_swing.md
 
-    - ML:
-      - 机器学习基础: ML/ml_basics.md
-      - Tensorflow安装: ML\tensorflow_install.md
-      - Tensorflow模型转换: ML\tensorflow_model.md
-      - 嵌入式机器学习: 
-        - 00：STM32图像分类: ML\how_to_run_dl_model_on_stm32.md
-
-    - Python:
-      - matplotlib使用: Python/matplotlib.md
-      - 三角函数: Python/python_trigonometric.md
-      - 录音与播放: Python/python_record_play.md  
-      - Python代码片段: Python\snippet.md
-      - Python字符串格式化: Python/python_string_format.md
-
-
-    - Embedded:
-      - CS:
-        - 字符集: Embedded System\cs\character_set.md
-
-      - C/C++: 
+    - C/C++: 
         - C内存模型: Embedded System/c&c++/c_memory_layout.md
         - C宏定义#与##: Embedded System/c&c++/c_micro_jing.md
         - 补码: Embedded System/c&c++/complement.md
@@ -68,13 +45,45 @@ nav:
         - pkg-config: Embedded System/c&c++/pkg_config.md
         - typedef使用注意: Embedded System/c&c++/typedef_tips.md
         - ASCII Table: Embedded System/c&c++/ascii_table.md
+        - C操作符优先级: Embedded System\c&c++\c_operator_precedence.md
         - CMake用法: Embedded System\c&c++\cmake_usage.md
         - C代码片段: Embedded System\c&c++\snippet.md
 
-      - Linux:
+
+    - STM32: 
+        - STM32经典书籍: Embedded System\STM32\stm32_books.md
+        - STM32的三种启动方式: Embedded System\STM32\stm32_boot_configure.md
+        - STM32的启动流程: Embedded System\STM32\stm32_boot.md
+        - STM32 initcall机制-Keil: Embedded System\STM32\stm32_initcall_keil.md
+        - STM32 initcall机制-GCC: Embedded System\STM32\stm32_initcall_gcc.md
+        - 调试器背后的秘密: Embedded System\STM32\debuger_flash_programming.md
+        - ARM链接脚本: Embedded System\STM32\stm32_link_script.md
+        - Keil AXF文件和BIN文件分析: Embedded System\STM32\stm32_elf_bin_file_analysis.md
+        - ARM汇编: Embedded System\STM32\arm_assembly.md
+
+        - STM32外设:
+          - STM32串口编程之中断方式: Embedded System/STM32/stm32_hal_uart.md
+          - STM32定时器编程之定时中断: Embedded System/STM32/stm32_hal_uart.md
+          - STM32定时器编程之PWM: Embedded System/STM32/stm32_hal_uart.md
+          - STM32 SPI: Embedded System/STM32/stm32_spi.md
+          - Flash 磨损均衡算法: Embedded System/STM32/stm32_flash_erase_leveling.md
+          - STM32软件复位: Embedded System\STM32\stm32_sw_reset.md
+
+        - Motor Control: 
+          - 转矩: Embedded System\motor_control\torque.md
+          - 直流刷式电机: Embedded System\motor_control\dc_motor_driver_chip.md
+          - 步进电机: Embedded System\motor_control\stepper_motor_driver_chip.md
+          - STM32控制42步进电机: Embedded System/STM32/stm32_io_drive_42stepper_l298n.md
+
+        - STM32开发神兵利器:
+          - JScope RTT模式: Embedded System\STM32\tools\jscope_rtt.md
+          - JScope HSS模式: Embedded System\STM32\tools\jscope_hss.md
+          - JLink RTT: Embedded System\STM32\tools\rtt.md
+
+    - Linux:
         - 开发环境相关: 
           - VirtualBox开发环境搭建: Embedded System\linux\embedded_linux_dev_env\virtual_box_env.md
-          - 构建内核源码树: Embedded System\linux\embedded_linux_dev_env\ubuntu_get_kernel_tree.md
+          - Ubuntu中构建内核源码树: Embedded System\linux\embedded_linux_dev_env\build_linux_source_tree_on_ubuntu.md
           - samba服务配置: Embedded System\linux\embedded_linux_dev_env\samba_server.md
           - FTP服务配置: Embedded System\linux\embedded_linux_dev_env\ftp_server.md
           - TFTP服务配置: Embedded System\linux\embedded_linux_dev_env\tftp_server.md
@@ -82,62 +91,67 @@ nav:
           - ARM交叉编译工具: Embedded System\linux\embedded_linux_dev_env\arm_compiler.md
           - Ubuntu启动错误: Embedded System\linux\embedded_linux_dev_env\ubuntu_boot_error.md
         
+        - JZ2440开发:
+          - CMake交叉编译: Embedded System\linux\jz2440\cmake_cross_compile.md
+          - JZ2440 dev tips: Embedded System\linux\jz2440\jz2440_dev_tips.md
+
         - 安全的使用rm: Embedded System\linux\embedded_linux_dev_env\rm.md
 
         - GNU make:
           - GNU make中的2种变量: Embedded System\linux\makefile\two_flavors_of_variables.md
 
-        - JZ2440开发:
-          - CMake交叉编译: Embedded System\linux\jz2440\cmake_cross_compile.md
-          - JZ2440 dev tips: Embedded System\linux\jz2440\jz2440_dev_tips.md
-
-      - STM32: 
-        - STM32串口编程之中断方式: Embedded System/STM32/stm32_hal_uart.md
-        - STM32定时器编程之定时中断: Embedded System/STM32/stm32_hal_uart.md
-        - STM32定时器编程之PWM: Embedded System/STM32/stm32_hal_uart.md
-        - STM32 SPI: Embedded System/STM32/stm32_spi.md
-        - STM32控制42步进电机: Embedded System/STM32/stm32_io_drive_42stepper_l298n.md
-        - Flash 磨损均衡算法: Embedded System/STM32/stm32_flash_erase_leveling.md
-        - 初始化函数的另一种写法: Embedded System/STM32/stm32_module_init_like.linux.md
-          
         - GCC编译动态链接库: Embedded System/gcc_dynamic_linking_library.md
         - 常用shell命令: Embedded System/linux_shell_cmd.md
         - Linux Shell脚本编程: Embedded System/linux_shell_program.md
         - GCC&Clang&LLVM的关系: Embedded System/gcc_clang_llvm.md
+        
+        - RK3399:
+          - 命令行连接WiFi热点: Embedded System\rk3399_cli_connect_wifi.md
 
-      - Motor Control: 
-        - 转矩: Embedded System\motor_control\torque.md
-        - 直流刷式电机: Embedded System\motor_control\dc_motor_driver_chip.md
-        - 步进电机: Embedded System\motor_control\stepper_motor_driver_chip.md
+    - Other:
+      - Computer Science:
+        - 字符集: Embedded System\cs\character_set.md
 
-      - Zigbee: Embedded System/zigbee_keys.md
-      - ESP8266: Embedded System/ESP8266.md
-      - NanoPC RK3399:  Embedded System/nanopc_m4.md
+      - Machine Learning:
+        - 机器学习基础: ML/ml_basics.md
+        - Tensorflow安装: ML\tensorflow_install.md
+        - Tensorflow模型转换: ML\tensorflow_model.md
+        - 嵌入式机器学习: 
+          - 00：STM32图像分类: ML\how_to_run_dl_model_on_stm32.md
+
+      - Python:
+        - matplotlib使用: Python/matplotlib.md
+        - 三角函数: Python/python_trigonometric.md
+        - 录音与播放: Python/python_record_play.md  
+        - Python代码片段: Python\snippet.md
+        - Python字符串格式化: Python/python_string_format.md
+
+      - Computer Vision:
+        - caffe: Computer Vision/caffe.md
+        - cv_library: Computer Vision/cv_library.md
+        - OpenCV4Android: Computer Vision/OpenCV4Android_001.md
+
+      - Multimedia:
+        - VOD: Multimedia/AliyunVOD/get_play_url.md
+        - 光学知识点: Multimedia/optical.md
+        - AAC编码: Multimedia/aac.md
+        - 彻底理解YUV格式: Multimedia/yuv.md
+        - 音视频同步: Multimedia/av_synchronization.md
+        - nginx: Multimedia/nginx.md
+        - Linux Shell命令: Multimedia/linux_shell_cmd_for_multimedia.md
+        - FFMPEG编译: Multimedia/ffmpeg_compile.md
+        - FFMPEG命令: Multimedia/ffmpeg_command.md
+        - FFMPEG API: Multimedia/ffmpeg_api.md
+        - EasyDarwin: Multimedia/easydarwin.md
+        - PCM: Multimedia/pcm.md
+        - WAV: Multimedia/wav_foramt.md
+        - OPUS: Multimedia/opus.md
+        - Ogg: Multimedia/Ogg.md
 
       - Hardware:
         - 电池工作时间的计算: Hardware/battery_work_time.md
-      
-    - CV:
-      - caffe: Computer Vision/caffe.md
-      - cv_library: Computer Vision/cv_library.md
-      - OpenCV4Android: Computer Vision/OpenCV4Android_001.md
 
-    - Multimedia:
-      - VOD: Multimedia/AliyunVOD/get_play_url.md
-      - 光学知识点: Multimedia/optical.md
-      - AAC编码: Multimedia/aac.md
-      - 彻底理解YUV格式: Multimedia/yuv.md
-      - 音视频同步: Multimedia/av_synchronization.md
-      - nginx: Multimedia/nginx.md
-      - Linux Shell命令: Multimedia/linux_shell_cmd_for_multimedia.md
-      - FFMPEG编译: Multimedia/ffmpeg_compile.md
-      - FFMPEG命令: Multimedia/ffmpeg_command.md
-      - FFMPEG API: Multimedia/ffmpeg_api.md
-      - EasyDarwin: Multimedia/easydarwin.md
-      - PCM: Multimedia/pcm.md
-      - WAV: Multimedia/wav_foramt.md
-      - OPUS: Multimedia/opus.md
-      - Ogg: Multimedia/Ogg.md
+      - ESP8266: Embedded System/ESP8266.md
 
     - Tools:
       - MkDocs搭建个人WiKi知识管理系统: 
