--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,8 +167,8 @@ nav:
         - 4.MkDocs - Wiki样式配置: Tools\mkdocs\mkdocs_theme.md
       - 嵌入式开发神兵利器: Tools\embedded_develop_tools.md
       - VPN:
-        - Shadowsocks Ubuntu客户端: Tools/VPN/Shadowsocks.md
-        - ShadowsocksR Ubuntu客户端: Tools/VPN/ShadowsocksR.md
+        - Shadowsocks Ubuntu客户端: Tools\VPN\Shadowsocks_client_for_ubuntu.md
+        - ShadowsocksR Ubuntu客户端: Tools\VPN\ShadowsocksR_client_for_ubuntu.md
         - ShadowsocksR Ubuntu服务端: Tools\VPN\ShadowsocksR_server_for_ubuntu.md
 
       - Markdown中的一些技巧: Tools\markdown.md
