--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,22 +47,22 @@ nav:
         - 补码: Embedded System/c&c++/complement.md
         - pkg-config: Embedded System/c&c++/pkg_config.md
         - ASCII Table: Embedded System/c&c++/ascii_table.md
-        - C操作符优先级: Embedded System\c&c++\c_operator_precedence.md
-        - CMake用法: Embedded System\c&c++\cmake_usage.md
-        - C代码片段: Embedded System\c&c++\snippet.md
+        - C操作符优先级: Embedded System/c&c++/c_operator_precedence.md
+        - CMake用法: Embedded System/c&c++/cmake_usage.md
+        - C代码片段: Embedded System/c&c++/snippet.md
 
 
     - STM32: 
-        - STM32经典书籍: Embedded System\STM32\stm32_books.md
-        - STM32的三种启动方式: Embedded System\STM32\stm32_boot_configure.md
-        - STM32在SRAM中运行代码: Embedded System\STM32\stm32_run_code_in_ram.md
-        - STM32的启动流程: Embedded System\STM32\stm32_boot.md
-        - STM32 initcall机制-Keil: Embedded System\STM32\stm32_initcall_keil.md
-        - STM32 initcall机制-GCC: Embedded System\STM32\stm32_initcall_gcc.md
-        - 调试器背后的秘密: Embedded System\STM32\debuger_flash_programming.md
-        - ARM链接脚本: Embedded System\STM32\stm32_link_script.md
-        - Keil AXF文件和BIN文件分析: Embedded System\STM32\stm32_elf_bin_file_analysis.md
-        - ARM汇编: Embedded System\STM32\arm_assembly.md
+        - STM32经典书籍: Embedded System/STM32/stm32_books.md
+        - STM32的三种启动方式: Embedded System/STM32/stm32_boot_configure.md
+        - STM32在SRAM中运行代码: Embedded System/STM32/stm32_run_code_in_ram.md
+        - STM32的启动流程: Embedded System/STM32/stm32_boot.md
+        - STM32 initcall机制-Keil: Embedded System/STM32/stm32_initcall_keil.md
+        - STM32 initcall机制-GCC: Embedded System/STM32/stm32_initcall_gcc.md
+        - 调试器背后的秘密: Embedded System/STM32/debuger_flash_programming.md
+        - ARM链接脚本: Embedded System/STM32/stm32_link_script.md
+        - Keil AXF文件和BIN文件分析: Embedded System/STM32/stm32_elf_bin_file_analysis.md
+        - ARM汇编: Embedded System/STM32/arm_assembly.md
 
         - STM32外设:
           - STM32串口编程之中断方式: Embedded System/STM32/stm32_hal_uart.md
@@ -70,41 +70,41 @@ nav:
           - STM32定时器编程之PWM: Embedded System/STM32/stm32_hal_uart.md
           - STM32 SPI: Embedded System/STM32/stm32_spi.md
           - Flash 磨损均衡算法: Embedded System/STM32/stm32_flash_erase_leveling.md
-          - STM32软件复位: Embedded System\STM32\stm32_sw_reset.md
+          - STM32软件复位: Embedded System/STM32/stm32_sw_reset.md
 
         - Motor Control: 
-          - 转矩: Embedded System\motor_control\torque.md
-          - 直流刷式电机: Embedded System\motor_control\dc_motor_driver_chip.md
-          - 步进电机: Embedded System\motor_control\stepper_motor_driver_chip.md
+          - 转矩: Embedded System/motor_control/torque.md
+          - 直流刷式电机: Embedded System/motor_control/dc_motor_driver_chip.md
+          - 步进电机: Embedded System/motor_control/stepper_motor_driver_chip.md
           - STM32控制42步进电机: Embedded System/STM32/stm32_io_drive_42stepper_l298n.md
 
         - STM32开发神兵利器:
-          - JScope RTT模式: Embedded System\STM32\tools\jscope_rtt.md
-          - JScope HSS模式: Embedded System\STM32\tools\jscope_hss.md
-          - JLink RTT: Embedded System\STM32\tools\rtt.md
+          - JScope RTT模式: Embedded System/STM32/tools/jscope_rtt.md
+          - JScope HSS模式: Embedded System/STM32/tools/jscope_hss.md
+          - JLink RTT: Embedded System/STM32/tools/rtt.md
 
     - Linux:
         - 开发环境相关: 
-          - VirtualBox开发环境搭建: Embedded System\linux\embedded_linux_dev_env\virtual_box_env.md
-          - Ubuntu中构建内核源码树: Embedded System\linux\embedded_linux_dev_env\build_linux_source_tree_on_ubuntu.md
-          - samba服务配置: Embedded System\linux\embedded_linux_dev_env\samba_server.md
-          - FTP服务配置: Embedded System\linux\embedded_linux_dev_env\ftp_server.md
-          - TFTP服务配置: Embedded System\linux\embedded_linux_dev_env\tftp_server.md
-          - NFS: Embedded System\linux\embedded_linux_dev_env\nfs_server.md
-          - ARM交叉编译工具: Embedded System\linux\embedded_linux_dev_env\arm_compiler.md
-          - Ubuntu启动错误: Embedded System\linux\embedded_linux_dev_env\ubuntu_boot_error.md
+          - VirtualBox开发环境搭建: Embedded System/linux/embedded_linux_dev_env/virtual_box_env.md
+          - Ubuntu中构建内核源码树: Embedded System/linux/embedded_linux_dev_env/build_linux_source_tree_on_ubuntu.md
+          - samba服务配置: Embedded System/linux/embedded_linux_dev_env/samba_server.md
+          - FTP服务配置: Embedded System/linux/embedded_linux_dev_env/ftp_server.md
+          - TFTP服务配置: Embedded System/linux/embedded_linux_dev_env/tftp_server.md
+          - NFS: Embedded System/linux/embedded_linux_dev_env/nfs_server.md
+          - ARM交叉编译工具: Embedded System/linux/embedded_linux_dev_env/arm_compiler.md
+          - Ubuntu启动错误: Embedded System/linux/embedded_linux_dev_env/ubuntu_boot_error.md
         
         - JZ2440开发:
-          - OpenJTAG: Embedded System\linux\jz2440\easy_open_jtag.md
-          - Uboot移植: Embedded System\linux\jz2440\uboot_porting.md
-          - Linux Kernel移植: Embedded System\linux\jz2440\linux_kernel_porting.md
-          - CMake交叉编译: Embedded System\linux\jz2440\cmake_cross_compile.md
-          - JZ2440 dev tips: Embedded System\linux\jz2440\jz2440_dev_tips.md
+          - OpenJTAG: Embedded System/linux/jz2440/easy_open_jtag.md
+          - Uboot移植: Embedded System/linux/jz2440/uboot_porting.md
+          - Linux Kernel移植: Embedded System/linux/jz2440/linux_kernel_porting.md
+          - CMake交叉编译: Embedded System/linux/jz2440/cmake_cross_compile.md
+          - JZ2440 dev tips: Embedded System/linux/jz2440/jz2440_dev_tips.md
 
-        - 安全的使用rm: Embedded System\linux\embedded_linux_dev_env\rm.md
+        - 安全的使用rm: Embedded System/linux/embedded_linux_dev_env/rm.md
 
         - GNU make:
-          - GNU make中的2种变量: Embedded System\linux\makefile\two_flavors_of_variables.md
+          - GNU make中的2种变量: Embedded System/linux/makefile/two_flavors_of_variables.md
 
         - GCC编译动态链接库: Embedded System/gcc_dynamic_linking_library.md
         - 常用shell命令: Embedded System/linux_shell_cmd.md
@@ -112,24 +112,24 @@ nav:
         - GCC&Clang&LLVM的关系: Embedded System/gcc_clang_llvm.md
         
         - RK3399:
-          - 命令行连接WiFi热点: Embedded System\rk3399_cli_connect_wifi.md
+          - 命令行连接WiFi热点: Embedded System/rk3399_cli_connect_wifi.md
 
     - Other:
       - Computer Science:
-        - 字符集: Embedded System\cs\character_set.md
+        - 字符集: Embedded System/cs/character_set.md
 
       - Machine Learning:
         - 机器学习基础: ML/ml_basics.md
-        - Tensorflow安装: ML\tensorflow_install.md
-        - Tensorflow模型转换: ML\tensorflow_model.md
+        - Tensorflow安装: ML/tensorflow_install.md
+        - Tensorflow模型转换: ML/tensorflow_model.md
         - 嵌入式机器学习: 
-          - 00：STM32图像分类: ML\how_to_run_dl_model_on_stm32.md
+          - 00：STM32图像分类: ML/how_to_run_dl_model_on_stm32.md
 
       - Python:
         - matplotlib使用: Python/matplotlib.md
         - 三角函数: Python/python_trigonometric.md
         - 录音与播放: Python/python_record_play.md  
-        - Python代码片段: Python\snippet.md
+        - Python代码片段: Python/snippet.md
         - Python字符串格式化: Python/python_string_format.md
 
       - Computer Vision:
@@ -164,23 +164,23 @@ nav:
 
     - Tools:
       - MkDocs搭建个人WiKi知识管理系统: 
-        - 1.MkDocs - 初识: Tools\mkdocs\mkdocs_intro.md
-        - 2.MkDocs - 部署到Github Pages: Tools\mkdocs\mkdocs_deploy_githubpages.md
-        - 3.MkDocs - 部署到Nginx: Tools\mkdocs\mkdocs_deploy_nginx.md
-        - 4.MkDocs - Wiki样式配置: Tools\mkdocs\mkdocs_theme.md
-      - 嵌入式开发神兵利器: Tools\embedded_develop_tools.md
+        - 1.MkDocs - 初识: Tools/mkdocs/mkdocs_intro.md
+        - 2.MkDocs - 部署到Github Pages: Tools/mkdocs/mkdocs_deploy_githubpages.md
+        - 3.MkDocs - 部署到Nginx: Tools/mkdocs/mkdocs_deploy_nginx.md
+        - 4.MkDocs - Wiki样式配置: Tools/mkdocs/mkdocs_theme.md
+      - 嵌入式开发神兵利器: Tools/embedded_develop_tools.md
       - VPN:
-        - Shadowsocks Ubuntu客户端: Tools\VPN\Shadowsocks_client_for_ubuntu.md
-        - ShadowsocksR Ubuntu客户端: Tools\VPN\ShadowsocksR_client_for_ubuntu.md
-        - ShadowsocksR Ubuntu服务端: Tools\VPN\ShadowsocksR_server_for_ubuntu.md
+        - Shadowsocks Ubuntu客户端: Tools/VPN/Shadowsocks_client_for_ubuntu.md
+        - ShadowsocksR Ubuntu客户端: Tools/VPN/ShadowsocksR_client_for_ubuntu.md
+        - ShadowsocksR Ubuntu服务端: Tools/VPN/ShadowsocksR_server_for_ubuntu.md
 
       - VIM:
-        - VIM基础: Tools\VIM\vim_base.md
-        - 使用VIM-Plug配合NERDTree: Tools\VIM\vim_plug_nerdtree.md
-        - VIM插件配置: Tools\VIM\vim_configure.md
-        - VIM使用: Tools\VIM\vim_usage.md 
+        - VIM基础: Tools/VIM/vim_base.md
+        - 使用VIM-Plug配合NERDTree: Tools/VIM/vim_plug_nerdtree.md
+        - VIM插件配置: Tools/VIM/vim_configure.md
+        - VIM使用: Tools/VIM/vim_usage.md 
 
-      - Markdown中的一些技巧: Tools\markdown.md
+      - Markdown中的一些技巧: Tools/markdown.md
       - git command: Tools/git_command.md
 
       - 局域网访问Jupyter Notebook: Tools/JupyterNotebook.md
