--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,8 @@ nav:
         - GNU链接脚本: Embedded System/STM32/stm32_gnu_link_script.md
         - Keil AXF文件和BIN文件分析: Embedded System/STM32/stm32_elf_bin_file_analysis.md
         - ARM汇编: Embedded System/STM32/arm_assembly.md
+        - OS特性: Embedded System/STM32/os_feature.md
+        - 在C中使用ARM汇编（GNU）: Embedded System/STM32/use_assembly_in_c.md
 
         - STM32外设:
           - STM32串口编程之中断方式: Embedded System/STM32/stm32_hal_uart.md
@@ -149,6 +151,7 @@ nav:
         - OpenCV4Android: Computer Vision/OpenCV4Android_001.md
 
       - Multimedia:
+        - 码率、H264 Profile和Level: Multimedia/h264_bitrate_profile_level.md
         - VOD: Multimedia/AliyunVOD/get_play_url.md
         - 光学知识点: Multimedia/optical.md
         - AAC编码: Multimedia/aac.md
