--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,13 +108,17 @@ nav:
           - ARM交叉编译工具: Embedded System/linux/embedded_linux_dev_env/arm_compiler.md
           - Ubuntu启动错误: Embedded System/linux/embedded_linux_dev_env/ubuntu_boot_error.md
         
+        - 编译系统:
+          - CMake交叉编译: Embedded System/linux/compile/cmake_cross_compile.md
+          - VSCode与CMake搭配使用之基本配置: Embedded System/linux/compile/vscode_cmake_base.md
+          - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compile/vscode_camke_cross_compile.md
+
         - JZ2440开发:
           - OpenJTAG烧写裸机程序uboot: Embedded System/linux/jz2440/easy_open_jtag.md
           - Uboot移植: Embedded System/linux/jz2440/uboot_porting.md
           - Uboot命令: Embedded System/linux/jz2440/uboot.md
           - 使用Uboot烧写内核和文件系统: Embedded System/linux/jz2440/write_system_use_uboot.md
           - Linux Kernel移植: Embedded System/linux/jz2440/linux_kernel_porting.md
-          - CMake交叉编译: Embedded System/linux/jz2440/cmake_cross_compile.md
           - JZ2440 dev tips: Embedded System/linux/jz2440/jz2440_dev_tips.md
 
         - 安全的使用rm: Embedded System/linux/embedded_linux_dev_env/rm.md
@@ -180,10 +184,6 @@ nav:
       - ESP8266: Embedded System/ESP8266.md
 
     - Tools:
-
-      - VSCode:
-        - VSCode与CMake搭配使用之基本配置: Tools/VSCode/vscode_cmake_base.md
-
       - MkDocs搭建个人WiKi知识管理系统: 
         - 1.MkDocs - 初识: Tools/mkdocs/mkdocs_intro.md
         - 2.MkDocs - 部署到Github Pages: Tools/mkdocs/mkdocs_deploy_githubpages.md
