--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,10 +115,12 @@ nav:
           - 安全的使用rm: Embedded System/linux/embedded_linux_dev_env/rm.md
         
         - 编译系统:
-          - CMake: Embedded System/linux/compile/cmake_base.md
-          - CMake交叉编译: Embedded System/linux/compile/cmake_cross_compile.md
-          - VSCode与CMake搭配使用之基本配置: Embedded System/linux/compile/vscode_cmake_base.md
-          - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compile/vscode_camke_cross_compile.md
+          - CMake: 
+            - CMake基础: Embedded System/linux/compile/cmake_base.md
+            - CMake编译静态链接库: Embedded System/linux/compile/cmake_static_library.md
+            - CMake交叉编译: Embedded System/linux/compile/cmake_cross_compile.md
+            - VSCode与CMake搭配使用之基本配置: Embedded System/linux/compile/vscode_cmake_base.md
+            - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compile/vscode_camke_cross_compile.md
           - GNU make中的2种变量: Embedded System/linux/compile/two_flavors_of_variables.md
           - GCC编译动态链接库: Embedded System/linux/compile/gcc_dynamic_linking_library.md
           - GCC&Clang&LLVM的关系: Embedded System/linux/compile/gcc_clang_llvm.md
