--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,7 +127,7 @@ nav:
         - 编译系统:
           - CMake: 
             - CMake基础: Embedded System/linux/compile/cmake_base.md
-            - CMake编译静态链接库: Embedded System/linux/compile/cmake_static_library.md
+            - CMake编译静态/动态链接库: Embedded System/linux/compile/cmake_static_library.md
             - CMake交叉编译: Embedded System/linux/compile/cmake_cross_compile.md
             - VSCode与CMake搭配使用之基本配置: Embedded System/linux/compile/vscode_cmake_base.md
             - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compile/vscode_camke_cross_compile.md
