--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,8 +142,13 @@ nav:
           - 环境变量: Embedded System/linux/os/linux_environment_variable.md
           - Shell编程基础: Embedded System/linux/os/linux_shell_program.md
 
-        - Linux设备驱动开发详解:
-          - 书籍配套资源: Embedded System/linux/linux_device_driver_baohua/relate_resource.md
+        - Linux Device Driver:
+          - 《Linux设备驱动开发详解》:
+            - 书籍配套资源: Embedded System/linux/linux_device_driver_baohua/relate_resource.md
+          - 最简单的驱动程序：Embedded System/linux/linux_driver/ld_hello_world.md
+          - 最简单的平台总线设备驱动程序：Embedded System/linux/linux_driver/ld_bus_dev_drv.md
+          - 设备树相关：Embedded System/linux/linux_driver/device_tree.md
+
 
         - JZ2440开发:
           - device tree:
@@ -209,6 +214,7 @@ nav:
 
       - Hardware:
         - 电池工作时间的计算: Hardware/battery_work_time.md
+        - USB-PD: Hardware/ubs_pd.md
 
       - ESP8266: Embedded System/ESP8266.md
 
