--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,9 +145,9 @@ nav:
         - Linux Device Driver:
           - 《Linux设备驱动开发详解》:
             - 书籍配套资源: Embedded System/linux/linux_device_driver_baohua/relate_resource.md
-          - 最简单的驱动程序：Embedded System/linux/linux_driver/ld_hello_world.md
-          - 最简单的平台总线设备驱动程序：Embedded System/linux/linux_driver/ld_bus_dev_drv.md
-          - 设备树相关：Embedded System/linux/linux_driver/device_tree.md
+          - 最简单的驱动程序: Embedded System/linux/linux_driver/ld_hello_world.md
+          - 最简单的平台总线设备驱动程序: Embedded System/linux/linux_driver/ld_bus_dev_drv.md
+          - 设备树相关: Embedded System/linux/linux_driver/device_tree.md
 
 
         - JZ2440开发:
